# qcert

./: .circle.yml  .dockerignore  .gitignore  DCO1.1.txt  Dockerfile  LICENSE  LICENSE.txt  Makefile  Makefile.config  Makefile.config_circle  Makefile.config_tmpl  Makefile.coq_modules  README-ODM.md  README.md  REPRO.md  _CoqProject  circle.yml  coq-qcert.opam  dune  dune-project  get-reproduced-paper.sh  package-lock.json  package.json  qcert-lib.opam  qcert.opam  reproduce-paper.sh
compiler/: .gitignore  .merlin  Makefile  dune
compiler/core/: Makefile  Version.v
compiler/core/Brands/: BrandRelation.v
compiler/core/CAMP/: CAMPSystem.v
compiler/core/CAMPRule/: CAMPRuleSystem.v  CAMPRuleTypes.v
compiler/core/DNNRC/: DNNRCRuntime.v  DNNRCSystem.v
compiler/core/Data/: DataRuntime.v  DataSystem.v  DataTypes.v  ForeignRuntime.v  ForeignTyping.v
compiler/core/Dataframe/: DataframeRuntime.v  DataframeSystem.v
compiler/core/DesignerRule/: DesignerRuleRuntime.v  DesignerRuleSystem.v
compiler/core/Driver/: CompConfig.v  CompCorrectness.v  CompCustom.v  CompDriver.v  CompEnv.v  CompEval.v  CompLang.v  CompStat.v
compiler/core/EJson/: EJsonRuntime.v  EJsonSystem.v
compiler/core/Extraction/: ExtrOcamlFloatNatIntZInt.v
compiler/core/Imp/: ImpOptim.v  ImpRuntime.v  ImpSystem.v
compiler/core/JSON/: JSONSystem.v
compiler/core/Java/: JavaSystem.v
compiler/core/JavaScript/: JavaScriptRuntime.v  JavaScriptSystem.v
compiler/core/JavaScriptAst/: JavaScriptAstRuntime.v
compiler/core/LambdaNRA/: LambdaNRARuntime.v  LambdaNRASystem.v  LambdaNRATypes.v
compiler/core/NNRC/: NNRCOptim.v  NNRCRuntime.v  NNRCSystem.v  NNRCTypes.v
compiler/core/NNRCMR/: NNRCMROptim.v  NNRCMRRuntime.v  NNRCMRSystem.v
compiler/core/NNRS/: NNRSRuntime.v  NNRSSystem.v  NNRSTypes.v
compiler/core/NNRSimp/: NNRSimpOptim.v  NNRSimpRuntime.v  NNRSimpSystem.v  NNRSimpTypes.v
compiler/core/NRA/: NRAOptim.v  NRARuntime.v  NRASystem.v  NRATypes.v
compiler/core/NRAEnv/: NRAEnvOptim.v  NRAEnvRuntime.v  NRAEnvSystem.v  NRAEnvTypes.v
compiler/core/OQL/: OQLRuntime.v  OQLSystem.v  OQLTypes.v
compiler/core/SQL/: SQLRuntime.v  SQLSystem.v
compiler/core/SQLPP/: SQLPPRuntime.v  SQLPPSystem.v
compiler/core/SparkDF/: SparkDFRuntime.v  SparkDFSystem.v
compiler/core/TechRule/: TechRuleSystem.v
compiler/core/Tests/: CAMPTest.v  CompilerTest.v  HelloWorld.v  LambdaNRATest.v  NNRCMRTests.v  NNRCTest.v  NRAEnvTest.v  NRATest.v  OQLTest.v  SQLTest.v  TCAMPTest.v  TDataTest.v  TNRATest.v  tDNNRCTest.v
compiler/core/TypeSystem/: DType.v  ForeignType.v  RConsistentSubtype.v  RSubtype.v  RSubtypeProp.v  RType.v  RTypeMeetJoin.v  RTypeNorm.v  TBrandContext.v  (+1 more)
compiler/extraction/: .gitignore  .merlin  Makefile  QcertExtraction.v  SExp.ml  dune  logger.ml  logger.mli  qcertJS.ml  sql_date_component.ml  sql_date_component.mli  util.ml  util.mli
compiler/lib/: .merlin  AstsToSExp.ml  AstsToSExp.mli  CheckUtil.ml  CheckUtil.mli  ConfigUtil.ml  ConfigUtil.mli  DataUtil.ml  DataUtil.mli  JavaService.ml  LoggerToSexp.ml  LoggerToSexp.mli  ParseFile.ml  ParseFile.mli  ParseString.ml  ParseString.mli  ParseUtil.ml  ParseUtil.mli  PrettyCommon.ml  PrettyCommon.mli  PrettyQuery.ml  PrettyQuery.mli  QcertArg.ml  QcertArg.mli  QcertConfig.ml  QcertConfig.mli  QcertCore.ml  QcertOut.ml  QcertOut.mli  QcertUtil.ml  TypeUtil.ml  TypeUtil.mli  args.ml  args.mli  ast_to_sexp.ml  ast_to_sexp.mli  check_util.ml  check_util.mli  compile.ml  compiler_util.ml  (+30 more)
compiler/libJS/: .gitignore  Makefile  dune  index.js  package.json  qcertJS.ml
compiler/libjs/: .merlin  Makefile  dune  qcertJS.ml
compiler/parsers/: .merlin  DataLexer.mll  DataParser.mly  LambdaNRALexer.mll  LambdaNRAParser.mly  OQLLexer.mll  OQLParser.mly  RuleLexer.mll  RuleParser.mly  SExpLexer.mll  SExpParser.mly  data_lexer.mll  data_parser.mly  dune  lambda_nra_lexer.mll  lambda_nra_parser.mly  oql_lexer.mll  oql_parser.mly  rule_lexer.mll  rule_parser.mly  sexp_lexer.mll  sexp_parser.mly
compiler/parsing/: data_lexer.mll  data_parser.mly  imp_ejson_lexer.mll  imp_ejson_parser.mly  lambda_nra_lexer.mll  lambda_nra_parser.mly  oql_lexer.mll  oql_parser.mly  rule_parser.mly  sexp_lexer.mll  sexp_parser.mly
compiler/src/: Makefile
compiler/util/: logger.ml  sql_date_component.ml  sql_date_component.mli  uri_component.ml  uri_component.mli  util.ml  util.mli  wasm.ml  wasm.mli  wasm_ast.ml
compiler/utils/: .merlin  LexUtil.mli  Logger.mli  dune
compiler/wasm/: README  runtime.wasm  wasm_ast.ml  wasm_ast.mli  wasm_backend.ml  wasm_binary_ejson.ml  wasm_binary_ejson.mli  wasm_ejson.ml  wasm_engine.ml  wasm_engine.mli  wasm_enhanced.ml  wasm_imp_runtime.ml  wasm_imp_scoping.ml  wasm_intf.ml  wasm_ir.ml  wasm_ir.mli  wasm_translate.ml  wasm_translate.mli  wasm_util.ml
ocaml/: .gitignore  .project  CACo.ml  CADa.ml  CAEv.ml  CALib.ml  CALib.mli  CALibJS.ml  CAPp.ml  Extraction.v  Makefile  QcertExtraction.v  README  README.java  README.opam  _tags  myocamlbuild.ml  qcert.html  qcert.ml  qcertJS.ml  qdata.ml
ocaml/japi/: Makefile
ocaml/src/: Asts.ml  Asts.mli  AstsToSExp.ml  AstsToSExp.mli  CACoAST.ml  CACoAST.mli  CampLexer.mll  CampParser.mly  CheckUtil.ml  CheckUtil.mli  CloudantUtil.ml  CloudantUtil.mli  CompConfig.ml  ConfigUtil.ml  ConfigUtil.mli  DataLexer.mll  DataParser.mly  DataUtil.ml  DataUtil.mli  DisplayUtil.ml  DisplayUtil.mli  EvalUtil.ml  EvalUtil.mli  FrontUtil.ml  FrontUtil.mli  JavaService.ml  LambdaNRALexer.mll  LambdaNRAParser.mly  LexUtil.ml  LexUtil.mli  Logger.ml  Logger.mli  LoggerToSexp.ml  LoggerToSexp.mli  ModelUtil.ml  ModelUtil.mli  OQLLexer.mll  OQLParser.mly  ParseFile.ml  ParseFile.mli  (+33 more)
runtimes/assemblyscript/: .npmignore  Makefile  assemblyscript.ml  assemblyscript_runtime.ml  cli-runner.js  dune  index.js  package-lock.json  package.json  runtime.wasm
runtimes/javascript/: .gitignore  .project  Makefile  README.md  dune  imp-runtime-dates.js  index.js  package.json  qcert-runtime-core.js  qcert-runtime-dates.js  qcert-runtime-sql-date.js  qcert-runtime-tostring.js  quote.ml  quoted-imp-runtime.js
(+3236 files in other folders)
