opam-version: "2.0"
name: "coq-qcert"
version: "3.0.0"
synopsis: "Verified compiler for data-centric languages"
description: """
This is the Coq library for Q*cert, a platform for implementing and verifying data languages and compilers. It includes abstract syntax and semantics for several source query languages (OQL, SQL), for intermediate database representations (nested relational algebra and calculus), and correctness proofs for part of the compilation to JavaScript and Java.
"""

maintainer: "Jerome Simeon <jeromesimeon@me.com>"
authors: [ "Josh Auerbach <>" "Martin Hirzel <>" "Louis Mandel <>" "Avi Shinnar <>" "Jerome Simeon <>" ]

license: "Apache-2.0"
homepage: "https://querycert.github.io"
bug-reports: "https://github.com/querycert/qcert/issues"
dev-repo: "git+https://github.com/querycert/qcert"

build: [
  [make "configure"]
  [make "-j" jobs name]
  ["dune" "build" "-j" jobs "-p" name]
  [make "docs"] {with-doc}
  [make "test"] {with-test}
]
install: [
  [make "install-coqdev"]
]
remove: ["rm" "-R" "%{lib}%/coq/user-contrib/Qcert"]
depends: [
  "ocaml" {>= "4.09.1"}
  "ocamlfind"
  "dune"
  "coq" {= "8.11.2" }
  "coq-jsast" {>= "2.0.0"}
  "menhir"
  "base64"
  "js_of_ocaml"
  "js_of_ocaml-ppx"
  "uri"
  "wasm" {= "1.0.1"}
  "calendar"
  "coq-coq2html" {with-doc}
]

tags: [ "keyword:databases" "keyword:queries" "keyword:relational" "keyword:compiler" "date:2020-07-24" "logpath:Qcert" ]
