opam-version: "2.0"
name: "qcert"
version: "2.0.0~alpha.1"
synopsis: "Verified compiler for data-centric languages"
description: """
This is the Coq library for Q*cert, a platform for implementing and verifying data languages and compilers. It includes abstract syntax and semantics for several source query languages (OQL, SQL), for intermediate database representations (nested relational algebra and calculus), and correctness proofs for part of the compilation to JavaScript and Java.
"""

maintainer: "Jerome Simeon <jeromesimeon@me.com>"
authors: [ "Josh Auerbach <>" "Martin Hirzel <>" "Louis Mandel <>" "Avi Shinnar <>" "Jerome Simeon <>" ]

license: "Apache-2.0"
homepage: "https://querycert.github.io"
bug-reports: "https://github.com/querycert/qcert/issues"
dev-repo: "git+https://github.com/querycert/qcert"

depends: [
  "ocaml" {>= "4.07.1"}
  "ocamlfind"
  "dune"
  "menhir"
  "base64"
  "coq-qcert"
  "qcert-lib"
]
build: [
  ["dune" "build" "-j" jobs "-p" name]
]

tags: [ "keyword:databases" "keyword:queries" "keyword:relational" "keyword:compiler" "date:2019-05-29" "logpath:Qcert" ]
