(ocamllex
  (modules sexp_lexer data_lexer lambda_nra_lexer rule_lexer oql_lexer imp_ejson_lexer)
)

(menhir
  (modules sexp_parser data_parser lambda_nra_parser rule_parser oql_parser imp_ejson_parser)
)

(library
 (name qcert_lib)
 (public_name coq-qcert)
 (libraries base64 uri calendar wasm)
)

(copy_files util/*.{ml,mli})
(copy_files wasm/*.{ml,mli})
(copy_files extraction/*.{ml,mli})
(copy_files parsing/*.{mll,mly})
(copy_files# lib/*.{ml,mli})
