(library
  (name assemblyscript_runtime)
  (public_name coq-qcert.runtime.assemblyscript)
  (libraries wasm))

(include_subdirs no)
(dirs :standard \ node_modules) ;; do not copy node_modules to _build

(rule ; not evaluated for package release (-p flag)
  (target runtime.wasm)
  (deps
    (:asm (source_tree assembly)
          (source_tree lib)
          (source_tree test_js)
          (glob_files ./build/*.wasm)))
  (action
    (progn
      (system "cp build/untouched.wasm runtime.wasm"))))

(rule
  (target stringified.ml)
  (deps runtime.wasm)
  (action
    (with-stdout-to
      stringified.ml
      (progn (echo "let runtime = \"")
             (run tools/binary_to_string.exe runtime.wasm)
             (echo "\"\n")))))
