(library
  (name js_runtime)
  (public_name coq-qcert.runtime.js))

(rule ; We promote to source dir because this file is also used from nodejs.
  (target qcert-runtime.js)
  (mode promote)
  (deps
    qcert-runtime-core.js
    qcert-runtime-tostring.js
    qcert-runtime-sql-date.js
    qcert-runtime-uri.js)
  (action
    (with-stdout-to
      qcert-runtime.js
      (progn (echo "/* include: qcert-runtime-core.js */\n\n")
             (cat qcert-runtime-core.js)
             (echo "/* include: qcert-runtime-tostring.js */\n\n")
             (cat qcert-runtime-tostring.js)
             (echo "/* include: qcert-runtime-sql-date.js */\n\n")
             (cat qcert-runtime-sql-date.js)
             (echo "/* include: qcert-runtime-uri */\n\n")
             (cat qcert-runtime-uri.js)))))

(rule
  (target js_runtime.ml)
  (deps qcert-runtime.js)
  (action
    (with-stdout-to
      js_runtime.ml
      (progn (echo "let runtime = {|\n")
             (cat qcert-runtime.js)
             (echo "|}\n")))))
